<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/banner"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.5"
        android:padding="30dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:srcCompat="@drawable/logo"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/txtLogoTextoSplahs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:fontFamily="@font/font_2"
            android:textColor="@color/colorBlanco"
            android:textStyle="bold"
            android:textSize="35sp"
            android:typeface="sans"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgemail"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_email" />

            <EditText
                android:id="@+id/edtemaillogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edt_redondeado"
                android:paddingLeft="20dp"
                android:hint="@string/edt_email"
                android:textColor="@color/colorNegro"
                android:textColorHint="@color/colorGris"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="20dp"
            android:layout_marginBottom="40dp"
            >

            <ImageView
                android:id="@+id/imglock"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_password" />

            <EditText
                android:id="@+id/edtpasslogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edt_redondeado"
                android:paddingLeft="20dp"
                android:hint="@string/edt_pass"
                android:textColor="@color/colorNegro"
                android:textColorHint="@color/colorGris"
                android:inputType="textPassword"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_ingresar_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/btn_ingresar"
                android:background="@drawable/btn_redondeado1"
                android:textColor="@color/colorBlanco"
                android:fontFamily="@font/font_2"
                android:textSize="20sp"
                android:layout_margin="20dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_registrar_login"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/btn_registrarse"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:textColor="@color/colorGris"
                android:background="#00FFFFFF"/>
            <Button
                android:id="@+id/btn_recuperar_login"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/btn_recuperar"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:textColor="@color/colorGris"
                android:background="#00FFFFFF"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>