<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/banner"
    android:orientation="vertical"
    tools:context=".RecuperarPass">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_redondeado1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/btn_volver_recuperar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_volver"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_2"
                android:text="@string/titulo_recuperar_contraseña"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.5"
        android:padding="30dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:srcCompat="@drawable/logo"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/txtLogoTextoSplahs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:fontFamily="@font/font_2"
            android:textColor="@color/colorBlanco"
            android:textStyle="bold"
            android:textSize="35sp"
            android:typeface="sans"/>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/txtBienvenida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_msj_correo"
            android:fontFamily="@font/font_2"
            android:textColor="@color/colorBlanco"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="serif"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="50dp"
            android:padding="20dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgemail"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_email" />

            <EditText
                android:id="@+id/edtemailrecuperar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edt_redondeado"
                android:paddingLeft="20dp"
                android:hint="@string/edt_email"
                android:textColor="@color/colorNegro"
                android:textColorHint="@color/colorGris"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_enviar_correo_recuperar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/btn_enviar_recuperar"
                android:background="@drawable/btn_redondeado1"
                android:textColor="@color/colorBlanco"
                android:fontFamily="@font/font_2"
                android:textSize="20sp"
                android:layout_margin="20dp"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>