<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/banner"
    android:orientation="vertical"
    tools:context=".ui.vender.registrarVentas">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:padding="30dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/logo"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/txtLogoTextoSplahs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:fontFamily="@font/font_2"
            android:textColor="@color/colorBlanco"
            android:textStyle="bold"
            android:textSize="35sp"
            android:typeface="sans"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="30"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_email" />

                <EditText
                    android:id="@+id/edtCorreo_regVenta"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edt_redondeado"
                    android:paddingLeft="20dp"
                    android:maxLength="70"
                    android:hint="@string/edt_email"
                    android:textColor="@color/colorNegro"
                    android:textColorHint="@color/colorGris"
                    android:inputType="textEmailAddress" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_cantidad" />

                <EditText
                    android:id="@+id/edtcantidad_regVenta"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edt_redondeado"
                    android:paddingLeft="20dp"
                    android:maxLength="5"
                    android:hint="@string/txt_cantidad"
                    android:textColor="@color/colorNegro"
                    android:textColorHint="@color/colorGris"
                    android:inputType="number" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:gravity="center">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_precio" />
                <EditText
                    android:id="@+id/edtprecio_regVenta"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edt_redondeado"
                    android:paddingLeft="20dp"
                    android:maxLength="4"
                    android:hint="@string/txt_precioacordado"
                    android:textColor="@color/colorNegro"
                    android:textColorHint="@color/colorGris"
                    android:inputType="numberDecimal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_descripcion" />

                <EditText
                    android:id="@+id/edtDescripcion_regVenta"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/edt_redondeado"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="20dp"
                    android:gravity="top"
                    android:maxLength="250"
                    android:hint="@string/txt_descripcion"
                    android:textColor="@color/colorNegro"
                    android:textColorHint="@color/colorGris"
                    android:inputType="textMultiLine" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_regVenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_registrar"
            android:background="@drawable/btn_1"
            android:textColor="@color/colorBlanco"
            android:textSize="20sp"
            android:layout_margin="20dp"/>
    </LinearLayout>
</LinearLayout>