<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/banner"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_redondeado1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/btn_volver_mapa"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_volver"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_height="40dp"
                android:text="@string/seleccione_su_ubicaci_n"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/txtUbicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/elegir_ubicacion"
        android:textColor="@color/colorNegro"
        android:padding="10dp"
        android:textAlignment="gravity"
        android:background="@drawable/edt_redondeado"
        android:textSize="16sp"/>
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="10"
        tools:context=".Buscar_direccion" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@drawable/btn_redondeado1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_guardar_ubicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/guardar_mi_ubicacion"
            android:background="@drawable/btn_2"
            android:textColor="@color/colorBlanco"
            android:textSize="20sp"
            />
    </LinearLayout>
</LinearLayout>