<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splash">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:background="@drawable/banner"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/degradado_splash"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top|center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="3"
            >
            <ImageView
                android:id="@+id/imgLogoSplahs"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/logo"/>
            <TextView
                android:id="@+id/txtLogoTextoSplahs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:fontFamily="@font/font_2"
                android:textColor="@color/colorBlanco"
                android:textStyle="bold"
                android:textSize="35sp"
                android:typeface="sans"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="8"
            >
            <TextView
                android:id="@+id/txtBienvenida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_bienvenida"
                android:fontFamily="@font/font_2"
                android:textColor="@color/colorBlanco"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="right"
            >
            <Button
                android:id="@+id/btn_omitir"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/btn_omitir"
                android:layout_margin="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/colorGris"
                android:background="#00FFFFFF"/>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>